--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ pwndck = "pwndck.pwndck:main"
 
 [tool.poetry.dependencies]
 requests = { version = ">=2.32.5,<3.0.0" }
+argparse-formatter = { version = ">=1.4,<2.0" }
 
 [tool.poetry.group.dev.dependencies]
 pytest="*"
