--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
+# Copyright (c) 2025 David Steele <dsteele@gmail.com>
+#
+# SPDX-License-Identifier: GPL-2.0-or-later
+# License-Filename: LICENSE
+#
+
 [build-system]
 requires = ["poetry-core>=2.0.0"]
 build-backend = "poetry.core.masonry.api"
