--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ classifiers = [
 ]
 dependencies = [
     "requests (>=2.32.5,<3.0.0)",
-    "argparse-formatter (>=1.4,<2.0)"
+    "argparse-formatter (>=1.4,<2.0)",
+    "brotli (>=1.1.0)"
 ]
 
 [project.urls]
