Flesh out pytests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,12 @@ dependencies = [
     "brotli (>=1.1.0)"
 ]
 
+[project.optional-depencies]
+test = [
+    "pytest",
+    "pytest-mock",
+]
+
 [project.urls]
 Homepage = "https://github.com/davesteele/pwndck"
 Source = "https://github.com/davesteele/pwndck.git"
@@ -54,3 +60,10 @@ line-length = 79
 
 [tool.isort]
 profile = "black"
+
+[tool.pytest.ini_options]
+addopts = "--import-mode=importlib"
+testpaths = [ "pwndck", "test" ]
+markers = [
+	"webtest: tests requiring internet access",
+]
