--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,8 @@ Rules-Requires-Root: binary-targets
 Homepage: https://github.com/davesteele/pwndck
 Vcs-Git: https://github.com/davesteele/pwndck.git -b debian
 Vcs-Browser: https://github.com/davesteele/pwndck/tree/debian
+Testsuite: autopkgtest-pkg-pybuild
+
 
 Package: pwndck
 Architecture: all
