--- a/debian/rules
+++ b/debian/rules
@@ -5,6 +5,10 @@ export PYBUILD_NAME=pwndck
 %:
 	dh $@ --with python3 --buildsystem=pybuild
 
+override_dh_auto_clean:
+	dh_auto_clean
+	./debian/release_check || echo "\nRELEASE CHECK FAILURE\n"
+
 override_dh_auto_build:
 	dh_auto_build
 	pandoc debian/pwndck.1.md -s -t man -o debian/pwndck.1
