Fix pyproject.toml entry point

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ Issues = "https://github.com/davesteele/pwndck/issues"
 Changelog = "https://github.com/davesteele/pwndck/blob/main/CHANGELOG.md"
 
 [project.scripts]
-pwndck = "pwndck.pwndck:main"
+pwndck = "pwndck.pwndckcli:main"
 
 [tool.poetry]
 package-mode = true
